# zerofetch

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  release.sh
.github/workflows/: cd.yml  ci.yml
src/: deskenv.rs  display.rs  gpu.rs  logos.rs  main.rs  theme.rs
tests/: gpu.rs
